--- a/docker/lr-sniffles2/Dockerfile
+++ b/docker/lr-sniffles2/Dockerfile
@@ -1,21 +1,34 @@
-FROM continuumio/miniconda3
-
-MAINTAINER Evie Wan
+############### stage 0
+FROM continuumio/miniconda3 AS build
 
 # copy other resources
 COPY ./environment.yml /
 
-# install conda packages
-RUN conda env create -f /environment.yml && conda clean -a
-ENV PATH=/opt/conda/envs/lr-sniffles2/bin/:/root/google-cloud-sdk/bin/:${PATH}
-ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/conda/envs/lr-sniffles2/lib/
+# Install the package as normal:
+COPY environment.yml .
+RUN conda env create -f environment.yml
 
-RUN apt-get -y update \
-	&& apt-get -y install git make cmake protobuf-compiler gcc g++ zlib1g-dev libcurl4-openssl-dev libbz2-dev tree python3-pip liblzma-dev wget curl \
-	&& apt-get clean
+# Install conda-pack:
+RUN conda install -c conda-forge conda-pack && \
+    conda clean -a
 
-# install gsutil
-RUN curl https://sdk.cloud.google.com | bash
+# Use conda-pack to create a standalone enviornment
+# in /venv:
+RUN conda-pack \
+    -n lr-sniffles2 \
+    -o /tmp/env.tar && \
+    mkdir /venv && cd /venv && tar xf /tmp/env.tar && \
+    rm /tmp/env.tar
 
+# We've put venv in same path it'll be in final image,
+# so now fix up paths:
+RUN /venv/bin/conda-unpack
 
-RUN echo "source activate lr-sniffles2" > ~/.bashrc
+############### stage 1
+FROM ubuntu:20.04 AS runtime
+
+# Copy /venv from the previous stage:
+COPY --from=build /venv /venv
+
+ENV VIRTUAL_ENV=/venv
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
